--- a/client/src/app/views/variants/variants-summary/variants-summary.component.html
+++ b/client/src/app/views/variants/variants-summary/variants-summary.component.html
@@ -111,7 +111,7 @@
   <nz-space-item>
     <div nz-row [nzGutter]="16">
       <nz-col [nzSpan]="16">
-        <cvc-event-feed [subscribable]="subscribable"></cvc-event-feed>
+        <cvc-event-feed [subscribable]="subscribable" tagDisplay="hideSubject"></cvc-event-feed>
       </nz-col>
     </div>
   </nz-space-item>
