--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -63,6 +63,13 @@
           <a routerLink="/variant-groups">Variant Groups</a>
         </span>
       </li>
+    </ul>
+
+    <ul nz-menu
+      nzTheme="dark"
+      nzMode="inline"
+      class="menu-group"
+      [nzInlineCollapsed]="isCollapsed">
       <li nz-menu-item nz-tooltip
         nzTooltipPlacement="right"
         [nzTooltipTitle]="isCollapsed ? 'Diseases' : ''"
@@ -70,6 +77,15 @@
         <i nz-icon nzType="civic-disease"></i>
         <span>
           <a routerLink="/diseases">Diseases</a>
+        </span>
+      </li>
+      <li nz-menu-item nz-tooltip
+        nzTooltipPlacement="right"
+        [nzTooltipTitle]="isCollapsed ? 'Phenotypes' : ''"
+        nzSelected nzMatchRouter>
+        <i nz-icon nzType="civic-phenotype"></i>
+        <span>
+          <a routerLink="/phenotypes">Phenotypes</a>
         </span>
       </li>
       <li nz-menu-item nz-tooltip
