--- a/client/src/app/views/phenotypes/phenotypes-summary/phenotypes-summary.component.html
+++ b/client/src/app/views/phenotypes/phenotypes-summary/phenotypes-summary.component.html
@@ -1,1 +1,8 @@
-<p>phenotypes-summary works!</p>
+<nz-space nzSize="middle" *ngIf="phenotypeId" nzDirection="vertical" class="space-align-block">
+  <nz-space-item>
+    <cvc-assertions-browse [phenotypeId]="phenotypeId"></cvc-assertions-browse>
+  </nz-space-item>
+  <nz-space-item>
+    <cvc-evidence-browse [phenotypeId]="phenotypeId"></cvc-evidence-browse>
+  </nz-space-item>
+</nz-space>
