Add disease detail and summary components

--- a/client/src/app/views/diseases/diseases-browse/diseases-browse.component.html
+++ b/client/src/app/views/diseases/diseases-browse/diseases-browse.component.html
@@ -61,7 +61,7 @@
               <tbody>
                 <tr *ngFor="let d of diseasesTable.data">
                   <td>
-                    {{ d.name }}
+                    <a routerLink="/diseases/{{d.id}}">{{ d.name }}</a>
                   </td>
                   <td>
                     {{ d.doid }}
