--- a/client/src/app/views/variant-types/variant-types-summary/variant-types-summary.component.html
+++ b/client/src/app/views/variant-types/variant-types-summary/variant-types-summary.component.html
@@ -1,1 +1,5 @@
-<p>Variant Type summary details go here.</p>
+<nz-space nzSize="middle" *ngIf="variantTypeId" nzDirection="vertical" class="space-align-block">
+  <nz-space-item>
+    <cvc-variants-browse [variantTypeId]="variantTypeId"></cvc-variants-browse>
+  </nz-space-item>
+</nz-space>
