Some bugfixes for variant type browse page

--- a/client/src/app/views/variant-types/variant-types-browse/variant-types-browse.component.html
+++ b/client/src/app/views/variant-types/variant-types-browse/variant-types-browse.component.html
@@ -20,7 +20,7 @@
                   Name
                 </th>
                 <th nzWidth="40%" [nzColumnKey]="sortColumns.Soid" [nzSortFn]="true">
-                  HPO ID
+                  SOID
                 </th>
                 <th nzWidth="20%" nzRight [nzColumnKey]="sortColumns.VariantCount" [nzSortFn]="true"><i nz-icon nzType="civic:variant" nz-tooltip nzTooltipTitle="Variant count"></i></th>
               </tr>
