Add variant type description

--- a/client/src/app/views/variant-types/variant-types-detail/variant-types-detail.component.html
+++ b/client/src/app/views/variant-types/variant-types-detail/variant-types-detail.component.html
@@ -18,6 +18,7 @@
     </nz-page-header-subtitle>
     <nz-page-header-content>
       <div class="content">
+        {{ variantType.description }}
         <router-outlet></router-outlet>
       </div>
     </nz-page-header-content>
