Add browse and detail views for drugs

--- a/client/src/app/views/diseases/diseases-detail/diseases-detail.component.html
+++ b/client/src/app/views/diseases/diseases-detail/diseases-detail.component.html
@@ -10,9 +10,9 @@
         </span>
       </nz-space>
     </nz-page-header-title>
-    <nz-page-header-subtitle>
+    <nz-page-header-subtitle *ngIf="disease.doid">
       <a [href]="disease.diseaseUrl" target="_blank">
-        {{ disease.name }}
+        DOID:{{ disease.doid }}
         <i nz-icon nzType="link"></i>
       </a>
     </nz-page-header-subtitle>
