--- a/client/src/app/views/sources/sources-browse/sources-browse.component.html
+++ b/client/src/app/views/sources/sources-browse/sources-browse.component.html
@@ -21,16 +21,19 @@
               >
               <thead (nzSortOrderChange)="onSortChanged($event)" >
                 <tr>
+                  <th nzWidth="10%">
+                    Citation
+                  </th>
                   <th nzWidth="10%" [nzColumnKey]="sortColumns.SourceType" [nzSortFn]="true">
                     Source Type
                   </th>
-                  <th nzWidth="10%" [nzColumnKey]="sortColumns.CitationId" [nzSortFn]="true">
+                  <th nzWidth="5%" [nzColumnKey]="sortColumns.CitationId" [nzSortFn]="true">
                     Citation ID
                   </th>
                   <th nzWidth="25%" [nzColumnKey]="sortColumns.Authors" [nzSortFn]="true">
                     Authors
                   </th>
-                  <th nzWidth="10%" [nzColumnKey]="sortColumns.Year" [nzSortFn]="true">
+                  <th nzWidth="5%" [nzColumnKey]="sortColumns.Year" [nzSortFn]="true">
                     Year
                   </th>
                   <th nzWidth="10%" [nzColumnKey]="sortColumns.Journal" [nzSortFn]="true">
@@ -42,6 +45,7 @@
                   <th nzWidth="3%" nzRight [nzColumnKey]="sortColumns.EvidenceCount" [nzSortFn]="true"><i nz-icon nzType="civic:evidence" nz-tooltip nzTooltipTitle="Evidence Count"></i></th>
                 </tr>
                 <tr>
+                  <th></th>
                   <th>
                     <nz-select nzAllowClear nzPlaceHolder="Choose" (ngModelChange)="onModelChanged()" [(ngModel)]="sourceTypeInput">
                       <nz-option nzValue="PUBMED" nzLabel="PubMed"></nz-option>
@@ -68,6 +72,9 @@
               </thead>
               <tbody>
                 <tr *ngFor="let source of sourcesTable.data">
+                  <td>
+                    <a routerLink="/sources/{{source.id}}">{{source.citation}}</a>
+                  </td>
                   <td>
                     {{ source.sourceType }}
                   </td>
