added evidence-popover component, evidence-tag now displays popover

--- a/client/src/app/components/shared/evidence-tag/evidence-tag.component.html
+++ b/client/src/app/components/shared/evidence-tag/evidence-tag.component.html
@@ -1,4 +1,12 @@
-<nz-tag nzColor="gold">
+<nz-tag nzColor="gold"
+  nz-popover
+  [nzPopoverMouseEnterDelay]="0.5"
+  [nzPopoverContent]="evidencePopover"
+  nzPopoverPlacement="right"
+  nzPopoverTrigger="hover">
   <i nz-icon nzType="civic-evidence"></i>
   {{ evidence.name }}
 </nz-tag>
+<ng-template #evidencePopover>
+  <cvc-evidence-popover [evidenceId]="evidence.id"></cvc-evidence-popover>
+</ng-template>
