--- a/client/src/themes/overrides/entity-popover.overrides.less
+++ b/client/src/themes/overrides/entity-popover.overrides.less
@@ -54,4 +54,6 @@
   // correctly calculate its display position
   min-width: 350px;
   max-width: 500px;
+  // also height for right or left-positioned popovers
+  min-height: 125px;
 }
