Add initial contributors summary api response

--- a/client/src/app/components/shared/user-hovercard/user-hovercard.component.html
+++ b/client/src/app/components/shared/user-hovercard/user-hovercard.component.html
@@ -37,6 +37,13 @@
         </nz-descriptions>
       </nz-col>
     </nz-row>
+    <nz-row>
+      <nz-divider *ngIf="metadataTemplateRef"></nz-divider>
+      <ng-container
+          [ngTemplateOutlet]="metadataTemplateRef|| null"
+          [ngTemplateOutletContext]="{ $implicit: user }">
+      </ng-container>
+    </nz-row>
   </ng-container>
 </div>
 <ng-template #noBio>
