add popovers to contributor avatar stacks

--- a/client/src/app/components/shared/contributor-avatars/contributor-avatars.component.html
+++ b/client/src/app/components/shared/contributor-avatars/contributor-avatars.component.html
@@ -3,31 +3,22 @@
     nz-typography
     nzType="secondary">Curators:</span>
   <div class="role-group">
-    <a *ngFor="let u of curators"
-      routerLink="/users/{{u.id}}"
-      class="avatar">
-      <nz-avatar [nzSize]="14"
-        nz-tooltip
-        [nzTooltipTitle]="u.displayName"
-        nzIcon="user"
-        [nzSrc]="u.profileImagePath"
-        nzSize="small"></nz-avatar>
-    </a>
+    <ng-container *ngIf="curators$ | ngrxPush as curators; else noCurators" >
+      <cvc-contributor-stack [contributors]="curators"></cvc-contributor-stack>
+    </ng-container>
+    <ng-template #noCurators>
+      None
+    </ng-template>
   </div>
   <span class="role-group-label"
     nz-typography
     nzType="secondary">Editors:</span>
   <div class="role-group">
-    <a *ngFor="let u of editors"
-      routerLink="/users/{{u.id}}"
-      class="avatar">
-      <nz-avatar routerLink="/users/{{u.id}}"
-        [nzSize]="14"
-        nz-tooltip
-        [nzTooltipTitle]="u.displayName"
-        nzIcon="user"
-        [nzSrc]="u.profileImagePath"
-        nzSize="small"></nz-avatar>
-    </a>
+    <ng-container *ngIf="editors$ | ngrxPush as editors; else noEditors" >
+      <cvc-contributor-stack [contributors]="editors"></cvc-contributor-stack>
+    </ng-container>
+    <ng-template #noEditors>
+      None
+    </ng-template>
   </div>
 </div>
